--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    list-style: circle;
 }
 .item {     
     width: 300px;
@@ -14,7 +13,11 @@
     font-family:  Arial, sans-serif;
     font-size: 34px;
     border-radius: 15px;
-    box-shadow: 10px 10px 40px #a9a9a9;
+    box-shadow: 10px 10px 40px #a9a9a9; 
+
+}
+.iconIsOnline {
+    fill: black;
 }
 .status {}
 .avatar {}
